--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
                 <action android:name="android.intent.action.PICK"/>
                 <data android:mimeType="application/pdf" />
             </intent-filter>
+
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <data
+                    android:host="cloud-signer"
+                    android:scheme="http" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
         </activity>
         <activity android:name=".OTPpopUp"
             android:theme="@style/AppTheme.CustomTheme">
