--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     //implementation 'com.android.support:customtabs:28.0.0'
     implementation files('libs/SecureBlackbox.Base.jar')
     implementation 'com.github.barteksc:android-pdf-viewer:2.6.1'
+    implementation files('libs/SecureBlackbox.LDAP.jar')
+    implementation files('libs/SecureBlackbox.HTTPClient.jar')
 }
