--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation files('libs/SecureBlackbox.SSLClient.jar')
     implementation files('libs/SecureBlackbox.SSLCommon.jar')
     implementation files('libs/SecureBlackbox.DC.jar')
+    implementation "com.android.support:design:28.0.0"
 
 }
