--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation files('libs/SecureBlackbox.SSLCommon.jar')
     implementation files('libs/SecureBlackbox.DC.jar')
     implementation "com.android.support:design:28.0.0"
+    implementation 'com.google.code.gson:gson:2.8.2'
 
 }
